<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="settings_name">Settings</string>
    <string name="jlib_version">jLIB Version</string>
    <string name="jlib">jLIB</string>
    <string name="libplaceholder">LIB Test</string>
    <string name="ok">OK</string>
    <string name="jlib_changelog">jLIB Changelog</string>
    <string name="theme_dialog_positive">Install</string>
    <string name="about">About</string>
    <string name="maintainer">Maintainer</string>
    <string name="contributor">Contributor</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="licences">Acknowledgements</string>
    <string name="example_info">Currently you have not overridden the product() function to insert your contributor list</string>
    <string name="dialog_fail_title">Well… It crashed!</string>
    <string name="dialog_fail_message">how did that happen??</string>
    <string name="dialog_ignore">Ignore</string>
    <string name="dialog_stacktrace">Show Stack Trace</string>
    <string name="exit_test_menu">Exit test menu</string>
    <string name="menu_action_icon">Menu Action Icon</string>
    <string name="theme_settings">Theme Settings</string>
    <string name="global_theme_settings">Theme Engine Settings</string>
    <string name="about_jlib">About jLib</string>
    <string name="birdgame">BirdGame</string>
    <!-- Custom seekbar -->
    <string name="custom_seekbar_jLib_value">Value: <xliff:g id="v">%s</xliff:g></string>
    <string name="custom_seekbar_jLib_default_value">by default</string>
    <string name="custom_seekbar_jLib_default_value_to_set">Default value: <xliff:g id="v">%s</xliff:g>\nLong tap to set</string>
    <string name="custom_seekbar_jLib_default_value_is_set">Default value is set</string>
    <string name="text_te_label">ThemeEngine is out of date</string>
    <string name="dialog_te_message">The version of ThemeEngine that is installed on your device is now out of date, please update it (if ThemeEngine was included with your OS then wait for an OS update)</string>
    <string name="dialog_te_negative">Ignore</string>
    <string name="dialog_te_positive">Update</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="obstaclegame">Obstacle Game</string>
    <string name="theme_snackbar">ThemeEngine is missing</string>
    <string name="rss_feed">RSS Feed Activity</string>
    <string name="fast_forward">+10s</string>
    <string name="play_pause">Play/Pause</string>
    <string name="rewind">-10s</string>
    <string name="cover_art">cover art</string>
    <string name="notification_permission">Notification Permission</string>
    <string name="no">No</string>
    <string name="settings_notif_dialog">The Notification permission is required for this jLib component, Please allow notification permission from settings</string>
    <string name="notif_dialog">The Notification permission is required for this jLib component, would you like to grant it</string>
    <string name="close_media_player">close media player</string>
    <string name="placeholder">PLACEHOLDER</string>
    <string name="preview_mode">PREVIEW MODE</string>
    <string name="import_registry_from_storage">Import registry from storage</string>
    <string name="export_registry_to_storage">Export registry to storage</string>
    <string name="edit_station_registry">Edit Registry</string>
    <string name="add_new_station_to_registry">Add new record to registry</string>
    <string name="station_url_input">Url Input</string>
    <string name="save_to_registry">Save to registry</string>
</resources>
