<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"     xmlns:settings="http://schemas.android.com/apk/res-auto">
    <androidx.preference.PreferenceCategory android:title="@string/jlib" android:key="lib_category">

        <SwitchPreference
            android:key="is_data_enabled"
            android:title="@string/usage_of_mobile_data" />

	    <Preference
            android:key="ThemeEngine"
            android:title="@string/theme_settings"
            android:icon="@mipmap/ic_themeengine"
            android:summary="@string/global_theme_settings"/>

        <Preference
            android:key="LIBVer"
            android:icon="@android:mipmap/sym_def_app_icon"
            android:title="@string/jlib_version"/>
    </androidx.preference.PreferenceCategory>
</PreferenceScreen>
