<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:text="@string/exit_test_menu"
        app:icon="@drawable/baseline_exit_to_app_24"
        android:contentDescription="@string/exit_test_menu"
        android:layout_height="?minTouchTargetSize"
        app:layout_constraintBottom_toTopOf="@id/button2"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:text="@string/birdgame"
        app:icon="@drawable/outline_videogame_asset_24"
        android:contentDescription="@string/birdgame"
        android:layout_height="?minTouchTargetSize"
        app:layout_constraintTop_toBottomOf="@id/button1"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:text="@string/obstaclegame"
            app:icon="@drawable/outline_videogame_asset_24"
            android:contentDescription="@string/obstaclegame"
            android:layout_height="?minTouchTargetSize"
            app:layout_constraintTop_toBottomOf="@id/button2"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:text="@string/rss_feed"
            app:icon="@drawable/outline_rss_feed_24"
            android:contentDescription="@string/rss_feed"
            android:layout_height="?minTouchTargetSize"
            app:layout_constraintTop_toBottomOf="@id/button3"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>